# auto_daily_report

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  config.py  db.sqlite3  django迁移计划.md  docker-compose.yml  docker-entrypoint.sh  email_generator.py  email_sender.py  fixed_django_cron_admin.py  fixed_django_cron_models.py  gemini_processor.py  github_action_runner.py  install.sh  logger.py  main.py  manage.py  pyproject.toml  schedule_tasks.sh  schedule_tasks_uv.bat  scraper.py  setup.sh  setup_uv.bat  setup_uv.sh  study_today.txt  test_scraper.py  update_settings.py
.github/workflows/: auto_report.yml  daily_report_uv.yml
daily_reporter_project/: asgi.py  settings.py  urls.py  wsgi.py
docs/: cron_setup.md  deployment.md  deployment_updated.md  docker-readme.md  web report 使用教程.MD
old/: .env.example  alice studio_email_logs.txt  github_action_runner.py  logger.py  main.py  requirements.txt  schedule_tasks.sh  schedule_tasks_uv.sh
reporter/: admin.py  apps.py  cron.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
reporter/management/: __init__.py
reporter/migrations/: 0001_initial.py  0002_monthlyplan.py  0003_usersettings_send_days_alter_usersettings_email_from_and_more.py  0004_usersettings_use_client_proxy.py  0005_emaillog.py  0006_usersettings_gemini_timeout.py  0007_add_is_scheduled_field.py  0008_alter_emaillog_is_scheduled.py  0009_usersettings_use_hf_proxy.py  0010_alter_usersettings_use_hf_proxy.py
scripts/: daily_report_runner.sh  setup_cron.sh  setup_django_cron.bat  setup_django_cron.sh
(+24 files in other folders)
